# Geoinformatica

./: README.md  commits.md  main.py  mlraster.ipynb  pyproject.toml  rastering.ipynb
app/: README.md  requirements.txt  streamlit_app.py  utils.py
browser_images/: 2026-03-08-00:00_2026-03-08-23:59_Sentinel-2_L2A_B01_(Raw).tiff  2026-03-08-00:00_2026-03-08-23:59_Sentinel-2_L2A_B02_(Raw).tiff  2026-03-08-00:00_2026-03-08-23:59_Sentinel-2_L2A_B03_(Raw).tiff  2026-03-08-00:00_2026-03-08-23:59_Sentinel-2_L2A_B04_(Raw).tiff  2026-03-08-00:00_2026-03-08-23:59_Sentinel-2_L2A_B05_(Raw).tiff  2026-03-08-00:00_2026-03-08-23:59_Sentinel-2_L2A_B06_(Raw).tiff  2026-03-08-00:00_2026-03-08-23:59_Sentinel-2_L2A_B07_(Raw).tiff  2026-03-08-00:00_2026-03-08-23:59_Sentinel-2_L2A_B08_(Raw).tiff  2026-03-08-00:00_2026-03-08-23:59_Sentinel-2_L2A_B09_(Raw).tiff  2026-03-08-00:00_2026-03-08-23:59_Sentinel-2_L2A_B8A_(Raw).tiff
