[project]
name = "geoinformatica"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.3",
    "leafmap>=0.61.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pytest>=9.0.3",
    "rasterio>=1.5.0",
    "scikit-learn>=1.8.0",
    "xarray>=2026.2.0",
    "streamlit>=1.30.0",
    "pillow>=10.0.0",
    "opencv-python-headless>=4.8.1.78",
    "imageio>=2.31.1",
    "geopy>=2.4.1",
]
